可获取所有FileBean